test/spec_vectors/data/ok/module_37.wat
(module (memory 1 2) (data (i32.const 65536) "a"))