test/spec_vectors/data/fail/module_58.wat
(module (memory 1) (data (nop)))